# teapot-cli

./: .env  .gitignore  README.md  TODO.md  cellr  pyproject.toml
src/teapot_cli/: __init__.py  main.py
src/teapot_cli/commands/: alias.py  config.py  file.py  install.py  package.py
src/teapot_cli/core/: alias.py  api.py  config.py  element.py  element_manager.py  file.py  package.py  packages.py  system.py
tests/: conftest.py
tests/test_core/: test_api.py  test_config.py
