[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "teapot-cli"
version = "0.1.0"
description = "A CLI tool for package installation and configuration management"
readme = "README.md"
requires-python = ">=3.13"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.25.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
    "platformdirs>=3.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
teapot = "teapot_cli.main:app"

[tool.ruff.lint]
extend-select = [
    "RUF",
    "COM",
    "Q",
    "UP",
    "I",
    "PERF",
    "N",
    "FLY",
    "PTH",
    "TC",
    "SIM",
    "RET",
    "FIX",
    "C4",
    "B",
    "ASYNC",
    "ANN001",
]

ignore = [
    "COM812",
]

exclude = [
    ".venv",
    ".git",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
